fix(pluginmanager): add factory creation and tests (#728)